# POS-Tagging

./: README.md
python/: Dockerfile  cli.py  pyproject.toml
python/pos_tagging/: config.py  train.py
python/pos_tagging/data/: pos_tags.py  processing.py  utils.py
python/pos_tagging/training/: initializers.py
